--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "private": true,
   "dependencies": {
     "@remotion/cli": "4.0.225",
+    "@remotion/tailwind": "4.0.225",
+    "@remotion/transitions": "^4.0.225",
     "@remotion/zod-types": "4.0.225",
+    "qrcode.react": "^4.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "remotion": "4.0.225",
-    "zod": "3.22.3",
-    "@remotion/tailwind": "4.0.225"
+    "zod": "3.22.3"
   },
   "devDependencies": {
     "@remotion/eslint-config": "4.0.225",
