update repo structure

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "screen-video-2024",
+  "name": "screen-video",
   "version": "1.0.0",
-  "description": "My Remotion video",
+  "description": "BaselHack digital signage videos",
   "repository": {},
   "license": "UNLICENSED",
   "private": true,
